create the matched blocks function

--- a/index.html
+++ b/index.html
@@ -21,112 +21,112 @@
         </div>
     </div>
     <div class="memory-game-blocks">
-        <div class="game-block">
+        <div class="game-block" data-technology="angular">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-angular"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="angular">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-angular"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="vue">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-vuejs"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="vue">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-vuejs"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="laravel">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-laravel"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="laravel">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-laravel"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="symfony">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-symfony"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="symfony">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-symfony"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="react">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-react"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="react">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-react"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="linux">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-linux"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="linux">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-linux"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="bootstrap">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-bootstrap"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="bootstrap">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-bootstrap"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="wordpress">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-wordpress"></i>
             </div>
         </div>
 
-        <div class="game-block">
+        <div class="game-block" data-technology="wordpress">
             <div class="face front"></div>
             <div class="face back">
                 <i class="fa-brands fa-wordpress"></i>
