--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             </div>
         </div>
     </div>
+    <audio src="audio/001.wav" preload="auto" id="success"></audio>
+    <audio src="audio/002.wav" preload="auto" id="failed"></audio>
     <script src="js.js"></script>
 </body>
 </html>
