Adding starting music

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <audio src="audio/VEGEDREAM - RAMENEZ LA COUPE A LA MAISON.m4a" id="start"></audio>
     <div class="control-buttons" id="control-buttons">
         <span>Start Game</span>
     </div>
@@ -135,6 +136,7 @@
     </div>
     <audio src="audio/001.wav" preload="auto" id="success"></audio>
     <audio src="audio/002.wav" preload="auto" id="failed"></audio>
+    
     <script src="js.js"></script>
 </body>
 </html>
